--- a/_includes/resourceinfo.html
+++ b/_includes/resourceinfo.html
@@ -1,1 +1,49 @@
-<span style="background: #ff0">Esta es la info del recurso</span>
+<h2>Attributes</h2>
+<ul>
+{% for attribute in page.attributes %}
+    <li>
+      <strong>{{ attribute.name }}</strong>:
+      <code>{{ attribute.crud | default: 'create,read,update' }}</code>
+      {% if attribute.valuetype %} <code>{{ attribute.valuetype }}</code> {% endif %}
+    </li>
+{% endfor %}
+</ul>
+
+{% if page.relationships %}
+<h2>Relationships</h2>
+<ul>
+{% for relationship in page.relationships %}
+    <li>
+      <strong>
+        <a href="/docs/resources/{{ relationship.resource }}/">
+          {{ relationship.resource }}
+        </a>
+      </strong>:
+      {% if relationship.hasMany %}
+        <code>has many</code>
+      {% else %}
+        <code>has one</code>
+      {% endif %}
+    </li>
+{% endfor %}
+</ul>
+{% endif %}
+
+{% if page.filters %}
+<h2>Filters</h2>
+<ul>
+{% for filter in page.filters %}
+    <li>
+      <strong>
+        {{ filter.attribute }}
+      </strong>:
+      <code>{{ filter.type | default: 'equals' }}</code>
+      {% if filter.multivalue %}
+        <code>se acepta varios valores, separados por coma</code>
+      {% else %}
+        <code>no acepta varios valores</code>
+      {% endif %}
+    </li>
+{% endfor %}
+</ul>
+{% endif %}
