--- a/_includes/topnav.html
+++ b/_includes/topnav.html
@@ -6,6 +6,7 @@
         <nav class="mdl-navigation mdl-layout--large-screen-only links">
           <a href="{{ "/docs/resources/products/" | prepend: site.baseurl }}">API</a>
           <a href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
+          <!--  descomentar cuando esté listo el blog -->
           <!--<a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog</a>-->
         </nav>
         <div class="mdl-layout-spacer"></div>
