--- a/_includes/docs_nav.html
+++ b/_includes/docs_nav.html
@@ -8,7 +8,10 @@
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <select class="mdl-textfield__input cursor-pointer" name="version" onchange="selectVersion(this.value)">
           {% for version in versions %}
-            <option value="{{ version.name }}" {% if page.url contains version.name %}selected{% endif %}>{{ version.name }}</option>
+            <!-- @todo remove if when we drop non-version links compatibility (for old URLs) -->
+            {% if version.name != "" %}
+              <option value="{{ version.name }}" {% if page.url contains version.name %}selected{% endif %}>{{ version.name }}</option>
+            {% endif %}
           {% endfor %}
         </select>
         <label class="mdl-textfield__label" for="version">Versión</label>
