--- a/_includes/resourceinfo.html
+++ b/_includes/resourceinfo.html
@@ -26,9 +26,11 @@
               <span class="code">{{ attribute.valuetype }}</span>
             {% endif %}
             {% if attribute.filter %}
-              <a href="{{ attribute.filter | prepend: "/" | prepend: site.version | prepend: "/docs/" | prepend: site.baseurl }}">
-                <span class="code">{{ attribute.filter }}</span>
+              <a class="code" href="{{ attribute.filter | prepend: "/" | prepend: site.version | prepend: "/docs/" | prepend: site.baseurl }}">
+                {{ attribute.filter }}
+                <!-- <span class="code">{{ attribute.filter }}</span> -->
               </a>
+              <span class="code">Sortable</span>
             {% endif %}
             {% if attribute.observation %}
               <span class="code" style="color: #fa3a00; word-wrap: word-break">{{ attribute.observation }}</span>
