--- a/site/_includes/topnav.html
+++ b/site/_includes/topnav.html
@@ -6,7 +6,9 @@
         <nav class="mdl-navigation mdl-layout--large-screen-only links">
           <a href="/">Home</a>
           <a href="{{ "/docs/" | append: site.version | append: "/resources/products/" | prepend: site.baseurl }}">API</a>
-          <a href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
+          {% if site.styleguide %}
+            <a href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
+          {% endif %}
           <!--  descomentar cuando esté listo el blog -->
           <!--<a href="{{ site.posts.first.url | prepend: site.baseurl }}">Blog</a>-->
         </nav>
@@ -31,7 +33,9 @@
   <nav class="mdl-navigation">
     <a class="mdl-navigation__link" href="{{ site.baseurl }}">Home</a>
     <a class="mdl-navigation__link" href="{{ "/docs/" | append: site.version | append: "/resources/products/" | prepend: site.baseurl }}">API</a>
-    <a class="mdl-navigation__link" href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
+    {% if site.styleguide %}
+      <a class="mdl-navigation__link" href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
+    {% endif %}
     <form class="mdl-navigation__link" id="search-form">
       <div class="mdl-textfield mdl-js-textfield">
         <input class="mdl-textfield__input search-box-mobile" type="text" Placeholder="Buscar...">
