--- a/site/_includes/topnav.html
+++ b/site/_includes/topnav.html
@@ -6,7 +6,7 @@
         <nav class="mdl-navigation mdl-layout--large-screen-only links">
           <a href="/">Home</a>
           <a href="{{ "/docs/" | append: site.version | append: "/resources/products/" | prepend: site.baseurl }}">API</a>
-          {% if site.show_styleguide == "true" %}
+          {% if site.show_styleguide %}
             <a href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
           {% endif %}
           <!--  descomentar cuando esté listo el blog -->
@@ -33,7 +33,7 @@
   <nav class="mdl-navigation">
     <a class="mdl-navigation__link" href="{{ site.baseurl }}">Home</a>
     <a class="mdl-navigation__link" href="{{ "/docs/" | append: site.version | append: "/resources/products/" | prepend: site.baseurl }}">API</a>
-    {% if site.show_styleguide == "true" %}
+    {% if site.show_styleguide %}
       <a class="mdl-navigation__link" href="{{ "/styleguide/intro" | prepend: site.baseurl }}">Guía de estilo</a>
     {% endif %}
     <form class="mdl-navigation__link" id="search-form">
